--- a/film site/styles.css
+++ b/film site/styles.css
@@ -17,7 +17,7 @@ html, body {
 
 
 body {
-    background: #AEFE14;
+    background: #fff;
     font-family: 'Monument Extended';
     font-size: 14px;
     color: #000;
