--- a/film site/styles.css
+++ b/film site/styles.css
@@ -160,6 +160,7 @@ i {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     text-transform: uppercase;
 }
 
