--- a/links-styles.css
+++ b/links-styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(216, 203, 248);
+    background-color: #0f0f0f;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -24,8 +24,8 @@ header {
     height: 40px;
     border-radius: 50px;
     border: 1.3px solid #0f0f0f;
-    background-color: rgba(173, 255, 50, 0.723);
-    opacity: 80%;
+    background-color: rgba(173, 255, 50, 1);
+    opacity: 92%;
 }
 
 .share-button svg {
@@ -80,7 +80,7 @@ a {
 
 .tile {
     width: 100%;
-    background-color: rgba(173, 255, 50, 0.723);
+    background-color: rgba(173, 255, 50, 1);
     opacity: 92%;
     margin: 7px;
     border-radius: 17px;
@@ -111,8 +111,8 @@ a {
 
 
 .image-container {
-    height: 140px;
-    width: 140px;
+    height: 200px;
+    width: 200px;
     border-radius: 60%;
     border: 1px solid #0f0f0f;
     overflow: hidden;
